--- a/armain.html
+++ b/armain.html
@@ -45,7 +45,7 @@
             <div class="det">
                 <div class="meat">
                     <img class="mar" src="meat-4.png" alt="" width="80px">
-                    <p class="amounts">9824911 Kg</p>
+                    <p class="amounts">0 Kg</p>
                     <p class="amounts">من لحوم طازجة تُسلم بشكل مستدام.</p>
 
                 </div>
@@ -148,7 +148,7 @@
                             <p>The Greek Campus, 28 Falaki St., Downtown, Cairo, Egypt</p>
                         </div>
                     </div>
-                    <div id="start"><a href="https://www.deltaoileg.com/"><i class="fa-brands fa-facebook-f" id="cont"></i></a>
+                    <div id="start"><a href="www.linkedin.com/in/mamdoh-samer-mohammed-fared-36a526297/"><i class="fa-brands fa-facebook-f" id="cont"></i></a>
                          <i class="fa-brands fa-whatsapp" id="cont"></i></div>
                 </div>
             </div>
