--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@ our communities and ensuring the sustainability of our planet, one meal at a tim
             <div class="det">
                 <div class="meat">
                     <img class="mar" src="meat-4.png" alt="" width="80px">
-                    <p class="amounts">9824911 Kg</p>
+                    <p class="amounts">0 Kg</p>
                     <p class="amounts">of fresh meat delivered sustainably.</p>
 
                 </div>
@@ -126,13 +126,13 @@ our communities and ensuring the sustainability of our planet, one meal at a tim
                     <div class="t" ><i class="fa-solid fa-envelope fa-xl"></i>
                     <div>
                         <p>Email:</p>
-                        <p>info@deltaoileg.com</p>
+                        <p>mmdohsamir91@gmail.com</p>
                     </div>
                     </div>
                     <div class="t" ><i class="fa-solid fa-phone fa-xl"></i>
                         <div>
                             <p>Call:</p>
-                            <p>(+2) 01227432207</p>
+                            <p>(+20) 01011093490</p>
                         </div>
                     </div>
                     <div class="t" ><i class="fa-solid fa-location-dot fa-xl"></i>
